# FlappyTeapot

./: .gitignore  Cargo.toml  README.md  demo.html  game.js  package.json  webpack.config.js
html/: demo.html  game.js  game.wasm
src/: game.rs  lib.rs
wrapper/: demo.html
