[package]
name = "flappyteapot"
version = "0.1.0"
authors = ["Karim Vergnes <thesola10@bobile.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"

[dependencies.web-sys]
version = "0.3.35"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
