[package]
name = "flappy-teapot"
version = "0.1.0"
authors = ["Karim Vergnes <thesola10@bobile.fr>"]
description = "A WASM game for HTTP error 418"
license = "GPL-3.0"
repository = "https://github.com/Thesola10/FlappyTeapot"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"
png = "0.16.1"
piet = "0.0.6"
piet-web = "0.0.6"

[dependencies.web-sys]
version = "0.3.35"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console'
]
